couple of sentry turret fixes
muffler upgrades weren't working right